feat: added new endpoint to post bulk file to the tb_file
